create panel from json

--- a/RevitFamilyToStl/RevitFamilyToStl.csproj
+++ b/RevitFamilyToStl/RevitFamilyToStl.csproj
@@ -11,6 +11,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <RuntimeIdentifier>win</RuntimeIdentifier>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x64' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,16 +51,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Command.cs" />
-    <Compile Include="ParameterInputForm.cs"> 
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\3X8X_panel_v1_2025_06_26.rfa">
+    <Content Include="input\3X8X_panel_v1_2025_06_26.rfa">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="input\panel_template_1.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Target Name="CopyRfaFile" AfterTargets="Build">
+    <Copy SourceFiles="$(ProjectDir)input\3X8X_panel_v1_2025_06_26.rfa" DestinationFolder="$(OutputPath)" />
+  </Target>
 </Project>
